# group-project

./: .gitignore  README.md  app.py  prep_data.py  pyproject.toml  requirements.txt  utils.py
.devcontainer/: devcontainer.json
data/: companies_clean.parquet
pages/: 0_Overview.py  1_Text.py  2_Coexistence.py  3_Geography.py
pages_internal/: __init__.py  page1_question.py  page3_answer.py  tab_geography.py  tab_penetration.py  tab_scale.py
