[project]
name = "yc-waves-viz"
version = "1.0.0"
description = "YC at 20: Three Waves Before AI -- interactive Streamlit visualization"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.30.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "plotly>=5.18.0",
    "networkx>=3.2",
    "folium>=0.15.0",
    "streamlit-folium>=0.15.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
