[project]
name = "yc-ai-trends-viz"
version = "1.0.0"
description = "Does the AI trend follow the patterns of earlier YC trends? — Interactive Streamlit visualization"
requires-python = ">=3.10"
dependencies = [
    "streamlit>=1.36.0",
    "pandas>=2.0.0",
    "pyarrow>=14.0.0",
    "plotly>=5.18.0",
    "folium>=0.15.0",
    "streamlit-folium>=0.15.0",
    "wordcloud>=1.9.0",
    "matplotlib>=3.7.0",
]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.backends.legacy:build"
